-added admin account -changed request body to a map -api refactoring
Co-authored-by: kaoares45@live.com <kaoares45@live.com>
Co-authored-by: Youssef Ahmad  <greatyassoo@users.noreply.github.com>
Co-authored-by: Karim Lialy <Kemol001@users.noreply.github.com>